--- a/statement-of-originality.yml
+++ b/statement-of-originality.yml
@@ -1,31 +1,11 @@
 # adapted from https://cs.anu.edu.au/courses/comp1720/resources/faq/#statement-of-originality
 
 # put *your* name here
-name:
+name: Dilara Buran
 
 declaration: >-
   I declare that everything I have submitted in this assignment is entirely my
-  own work, with the following exceptions:
+  own work. For inspiration, I used this tutorial: https://www.youtube.com/watch?v=V6-AGGGOkhQ
+  
 
 
-# add as many "name+comment" entries as necessary
-# (or remove it altogether if you haven't collaborated with anyone)
-collaboration:
-  - name:
-    comment: >-
-      
-
-# add as many "url+licence+comment" entries as necessary
-# (or remove it altogether if you haven't used any external code)
-code:
-  - comment:
-    url:
-    licence:
-
-
-# add as many "url+licence+comment" entries as necessary
-# (or remove it altogether if you haven't used any external assets)
-assets:
-  - comment:
-    url:
-    licence:
